# xmsgrid

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  ____init_____8py_source.html  _doxygen_mainpage_8md_source.html  _file_i_o___tutorial_8md_source.html  _gm_boost_types_8h.html  _gm_boost_types_8h_source.html  _gm_extents_8cpp.html  _gm_extents_8cpp_source.html  _gm_extents_8h.html  _gm_extents_8h_source.html  _gm_extents_8t_8h.html  _gm_extents_8t_8h_source.html  _gm_multi_poly_intersection_sorter_8h.html  _gm_multi_poly_intersection_sorter_8h_source.html  _gm_multi_poly_intersection_sorter_terse_8cpp.html  _gm_multi_poly_intersection_sorter_terse_8cpp_source.html  _gm_multi_poly_intersection_sorter_terse_8h.html  _gm_multi_poly_intersection_sorter_terse_8h_source.html  _gm_multi_poly_intersector_8cpp.html  _gm_multi_poly_intersector_8cpp_source.html  _gm_multi_poly_intersector_8h.html  _gm_multi_poly_intersector_8h_source.html  _gm_multi_poly_intersector_8t_8h.html  _gm_multi_poly_intersector_8t_8h_source.html  _gm_multi_poly_intersector_data_8h.html  _gm_multi_poly_intersector_data_8h_source.html  _gm_poly_line_pt_redistributer_8cpp.html  _gm_poly_line_pt_redistributer_8cpp_source.html  _gm_poly_line_pt_redistributer_8h.html  _gm_poly_line_pt_redistributer_8h_source.html  _gm_poly_line_pt_redistributer_8t_8h.html  _gm_poly_line_pt_redistributer_8t_8h_source.html  _gm_polygon_8cpp.html  _gm_polygon_8cpp_source.html  _gm_polygon_8h.html  _gm_polygon_8h_source.html  (+386 more)
.github/workflows/: Coverage.yaml  Linux-CI.yaml  Mac-CI.yaml  Windows-CI.yaml  XmsGrid-CI.yaml
.travis/: install.sh  run.sh
Doxygen/: Doxyfile  DoxygenMainpage.md  FileIO_Tutorial.md  Geometry_Tutorial.md  Interpolation_Tutorial.md  ThreeD_Tutorial.md  Triangulate_Tutorial.md  TwoD_Tutorial.md
_package/: __init__.py  pyproject.toml  setup.py
_package/tests/unit_tests/geometry_tests/: GmTriSearch_pyt.py  geometry_pyt.py  multi_poly_intersector_pyt.py  trisearch_pyt.py
_package/tests/unit_tests/triangulate_tests/: tin_pyt.py
_package/tests/unit_tests/ugrid_tests/: edge_pyt.py  ugrid_pyt.py  ugrid_utils_pyt.py
_package/xms/grid/: __init__.py
_package/xms/grid/geometry/: __init__.py  geometry.py  multi_poly_intersector.py  tri_search.py
_package/xms/grid/triangulate/: __init__.py  tin.py
_package/xms/grid/ugrid/: __init__.py  ugrid.py  ugrid_utils.py
_package/xmsgrid/: __init__.py
_package/xmsgrid/geometry/: tri_search.py
_package/xmsgrid/triangulate/: tin.py
_package/xmsgrid/ugrid/: ugrid.py  ugrid_utils.py
dev/: coverage.sh  patch_xmsconan.py  setenv.bat  setenv.sh  xmsprofile_debug  xmsprofile_release
docs/superpowers/specs/: 2026-05-08-coverage-reporting-design.md
examples/: UGridTutorial.html  UGrids.ipynb  ug3.xmsgrid  ugrid_tools.py
examples/UGrid/: UGrids.ipynb
pydocs/: .buildinfo  genindex.html  getting_started.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  getting_started.doctree  index.doctree  modules.doctree
pydocs/_sources/: getting_started.rst.txt  index.rst.txt  modules.rst.txt
pydocs/modules/geometry/: TriSearch.html
pydocs/modules/triangulate/: Tin.html
pydocs/modules/ugrid/: UGrid.html  XmUGrid.html  XmUGridUtils.html  edge.html  ugrid_utils.html
pydocs/source/: conf.py  getting_started.rst  index.rst  modules.rst
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  (+48 more)
test_files/: 3d_grid_linear.xmugrid  bug-0015785.xmugrid  bug12586.xmc  bug12728.xmc  bug13273.xmc  bug15178.xmc  bug15186.xmc  bug15186a.xmc  double_point_in_snap.xmugrid  remove-cell-base.xmugrid  remove-cells-base.xmugrid  remove-point-base.xmugrid  remove-points-and-cells-base.xmugrid  remove-points-and-cells-input.xmugrid  remove-points-base.xmugrid  snap_bug_grid.xmugrid
test_files/clipper/: horn-base.xmugrid  horn.xmugrid  octagon.xmugrid
test_package/: conanfile.py
xmsgrid/dataio/: daStreamIo.cpp  daStreamIo.h  daStreamIo.t.h
xmsgrid/geometry/: GmBoostTypes.h  GmExtents.cpp  GmExtents.h  GmExtents.t.h  GmMultiPolyIntersectionSorter.h  GmMultiPolyIntersectionSorterTerse.cpp  GmMultiPolyIntersectionSorterTerse.h  GmMultiPolyIntersector.cpp  GmMultiPolyIntersector.h  GmMultiPolyIntersector.t.h  GmMultiPolyIntersectorData.h  GmMultiPolyIntersectorEdgeWalk.cpp  GmMultiPolyIntersectorEdgeWalk.h  GmPolyLinePtRedistributer.cpp  GmPolyLinePtRedistributer.h  GmPolyLinePtRedistributer.t.h  GmPolygon.cpp  GmPolygon.h  GmPolygon.t.h  GmPtSearch.cpp  GmPtSearch.h  GmPtSearch.t.h  GmTriSearch.cpp  GmTriSearch.h  GmTriSearch.t.h  geoms.cpp  geoms.h  geoms.t.h
xmsgrid/matrices/: matrix.cpp  matrix.h
xmsgrid/python/: xmsgrid_py.cpp
xmsgrid/python/geometry/: GmMultiPolyIntersector_py.cpp  GmTriSearch_py.cpp  GmTriSearch_pyt.py  geometry_py.cpp  geometry_py.h
xmsgrid/python/triangulate/: TrTin_py.cpp  TrTin_pyt.py  triangulate_py.cpp  triangulate_py.h
xmsgrid/python/ugrid/: XmEdge_py.cpp  XmEdge_pyt.py  XmUGridUtils_py.cpp  XmUGridUtils_pyt.py  XmUGrid_py.cpp  XmUGrid_pyt.py  ugrid_py.cpp  ugrid_py.h
xmsgrid/triangulate/: TrBreaklineAdder.cpp  TrBreaklineAdder.h  TrBreaklineAdder.t.h  TrTin.cpp  TrTin.h  TrTin.t.h  TrTriangulator.cpp  TrTriangulator.h  TrTriangulatorPoints.cpp  TrTriangulatorPoints.h  TrTriangulatorPoints.t.h  triangles.cpp  triangles.h
xmsgrid/triangulate/detail/: TrAutoFixFourTrianglePts.cpp  TrAutoFixFourTrianglePts.h  (+6 more)
xmsgrid/ugrid/: XmConvexHull.cpp  XmConvexHull.h  XmConvexHull.t.h  XmEdge.cpp  XmEdge.h  XmEdge.t.h  XmUGrid.cpp  XmUGrid.h  XmUGrid.t.h  XmUGridUtils - Copy.cpp  XmUGridUtils.cpp  XmUGridUtils.h  XmUGridUtils.t.h
(+28 files in other folders)
